cdf/transfer_family/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Template for VPC
Parameters:
  VpcCidr:
    Type: String
    Default: 10.12.0.0/16
  SubnetCidr:
    Type: String
    Default: 10.12.0.0/24
  LogGroupName:
    Type: String
    Default: SFTPLog
  #sgで許可するIP
  #AllowedIP:
  #  Type: String
  #  Default: 0.0.0.0/0
  #????
  #Env:
  #  Type: String
  ##  Default: test
   # AllowedValues: ["test","prod"]
#Conditions:
#    IsProd: !Equals [!Ref Env , "prod"]
    
Resources:
  #######################################
  #SFTPを置くVPCの設定(VPC/Subnet/IGW/RouteTable/SGなど/)
  #######################################
  CFnVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      #10.12.0.0/16 #!If [IsProd,10.12.0.0/16,10.24.0.0/16]
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          #Env???????
          Value: sftp_vpc
          #!Sub cfn-${Env}
        ## secret managerの値をタグに追加する
        #- Key: "Secret"
        #  Value: '{{resolve:secretsmanager:arn:aws:secretsmanager:ap-northeast-1:{account-id}:secret:test_secret_keys-3WPOtW:SecretString:test_api_key}}'
          
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.12.0.0/24
      #環境ごとに分ける場合
      ##!If [IsProd,10.12.0.0/24,10.24.0.0/24]
      VpcId: !Ref CFnVPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: sftp_pub_sub1
  #internet-gateway
  CFnVPCIGW:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: sftp_igw

  CFnVPCIGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref CFnVPCIGW
      VpcId: !Ref CFnVPC
      
####################################
##################################
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CFnVPC
      Tags:
        - Key: Name
          Value: sftp_route_table

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: CFnVPCIGW
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CFnVPCIGW

  PublicSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  ElasticIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref CFnVPC
      GroupDescription: "SFTP SSHSG"
      GroupName: "SFTP_SSHSG"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          #allow anywhere 
          CidrIp: 0.0.0.0/0
  
  #####################################
  #TransferFamily自体の設定
  #####################################
  Log:
    Type: AWS::Logs::LogGroup
    DeletionPolicy: Retain
    Properties:
      LogGroupName: !Ref LogGroupName
      
    #DataProtectionPolicy: Json
    #KmsKeyId: String
      #LogGroupClass: Standard 
      #RetentionInDays: Integer

  SFTPServer:
    Type: AWS::Transfer::Server
    Properties:
      EndpointDetails:
        AddressAllocationIds:
          -  !GetAtt ElasticIP.AllocationId
          #!Ref ElasticIP
        SecurityGroupIds:
          - !Ref SSHSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
        VpcId: !Ref CFnVPC
      EndpointType: VPC 
      Domain: S3     
      Protocols:
        - SFTP
      LoggingRole: !GetAtt TransferLoggingRole.Arn
      StructuredLogDestinations: [!GetAtt Log.Arn]
      Tags:
        - Key: Name
          Value: "sftp-server"
  
    
  TransferLoggingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument: 
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: 
              Service: transfer.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSTransferLoggingAccess    


#####
#cloudformation command
#
#aws cloudformation delete-stack --stack-name test
#
#######
